#
# Project Configuration
#

[build-system]
build-backend = "hatchling.build"

requires = [ "hatchling" ]

[project]
name = "tika-client"
description = "A modern REST client for Apache Tika server"
readme = "README.md"
keywords = [ "api", "client", "html", "office", "pdf", "tika" ]
license = "MPL-2.0"
authors = [
  { name = "Trenton H", email = "rda0128ou@mozmail.com" },
]
requires-python = ">=3.10"
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Web Environment",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: Mozilla Public License 2.0 (MPL 2.0)",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dynamic = [ "version" ]

#
# Dependencies
#

dependencies = [
  "anyio>=4.12,<5",
  "httpx>=0.28,<1",
  "typing-extensions; python_version<'3.11'",
]

urls.changelog = "https://github.com/stumpylog/tika-rest-client/blob/main/CHANGELOG.md"
urls.documentation = "https://github.com/stumpylog/tika-rest-client#readme"
urls.issues = "https://github.com/stumpylog/tika-rest-client/issues"
#
# Hatch Configuration
#

urls.source = "https://github.com/stumpylog/tika-client"

[tool.hatch.version]
path = "src/tika_client/__about__.py"

[tool.hatch.build.targets.sdist]
exclude = [
  ".github",
  ".docker",
]

[tool.hatch.envs.default]
installer = "uv"

[tool.hatch.envs.hatch-static-analysis]
# https://hatch.pypa.io/latest/config/internal/static-analysis/
dependencies = [ "ruff ~= 0.14" ]
config-path = "none"

[tool.hatch.envs.hatch-test]
# https://hatch.pypa.io/latest/config/internal/testing/
parallel = true
randomize = true
extra-dependencies = [
  "pytest-sugar",
  "pytest-httpx ~= 0.36",
  "python-magic",
  "pytest-docker ~= 3.2",
  "pytest-asyncio ~= 1.3",
]
extra-args = [ "--maxprocesses=8", "--pythonwarnings=all" ]

[tool.hatch.envs.hatch-test.scripts]
run = [
  "python3 --version",
  "pytest{env:HATCH_TEST_ARGS:} {args}",
]

run-cov = [
  "python3 --version",
  "coverage erase",
  "coverage run -m pytest{env:HATCH_TEST_ARGS:} {args}",
]
cov-combine = [ "coverage combine" ]
cov-report = [
  "coverage report",
  "coverage json",
  "coverage html",
]

[[tool.hatch.envs.hatch-test.matrix]]
python = [ "3.10", "3.11", "3.12", "3.13", "3.14", "pypy3.8", "pypy3.10", "pypy3.11" ]

#
# Custom Environments
#
[tool.hatch.envs.typing]
detached = true
dependencies = [
  "mypy ~= 1.19",
  "httpx",
]

[tool.hatch.envs.typing.scripts]
run = [
  "mypy --version",
  "mypy --install-types --non-interactive {args:src/tika_client}",
]

[tool.hatch.envs.pre-commit]
template = "pre-commit"
detached = true
dependencies = [
  "pre-commit ~= 4.5",
  "pre-commit-uv",
]

[tool.hatch.envs.pre-commit.scripts]
check = [ "pre-commit run --all-files" ]
update = [ "pre-commit autoupdate" ]

#
# Tool Configuration
#

[tool.ruff]
target-version = "py310"
line-length = 120

# https://docs.astral.sh/ruff/settings/
fix = true
output-format = "grouped"
# https://docs.astral.sh/ruff/rules/
lint.extend-select = [
  "A",     # https://docs.astral.sh/ruff/rules/#flake8-builtins-a
  "ANN",   # https://docs.astral.sh/ruff/rules/#flake8-annotations-ann
  "ARG",
  "ASYNC", # https://docs.astral.sh/ruff/rules/#flake8-async-async
  "B",     # https://docs.astral.sh/ruff/rules/#flake8-bugbear-b
  "C",
  "C4",
  "COM",
  "D",     # https://docs.astral.sh/ruff/rules/#pydocstyle-d
  "DTZ",
  "E",
  "EM",
  "ERA",
  "EXE",
  "F",
  "FA",
  "FBT",   # https://docs.astral.sh/ruff/rules/#flake8-boolean-trap-fbt
  "FLY",
  "FURB",  # https://docs.astral.sh/ruff/rules/#refurb-furb
  "G",     # https://docs.astral.sh/ruff/rules/#flake8-logging-format-g
  "I",
  "ICN",
  "INP",   # https://docs.astral.sh/ruff/rules/#flake8-no-pep420-inp
  "INT",
  "ISC",
  "LOG",   # https://docs.astral.sh/ruff/rules/#flake8-logging-log
  "N",
  "PERF",
  "PGH",
  "PIE",
  "PL",
  "PLC",
  "PLE",
  "PLR",
  "PLW",
  "PT",
  "PTH",
  "Q",
  "RSE",
  "RUF",   # https://docs.astral.sh/ruff/rules/#ruff-specific-rules-ruf
  "S",
  "SIM",
  "SLF",
  "T",
  "T10",
  "T20",
  "TCH",
  "TD",
  "TID",
  "TRY",
  "UP",
  "W",
  "YTT",   # https://docs.astral.sh/ruff/rules/#flake8-2020-ytt
]
lint.ignore = [
  # Don't require a public docstring for everything
  "D100",
  # I prefer no blank line before a class docstring
  "D203",
  # I prefer a different style
  "D212",
]
lint.per-file-ignores."tests/**/*" = [
  # Tests do not need docstrings
  "D",
  # Tests can use magic numbers
  "PLR2004",
  # Test can (and must) use assert
  "S101",
]
# No relative imports allowed anywhere
lint.flake8-tidy-imports.ban-relative-imports = "all"
# One import per line
lint.isort.force-single-line = true
# Recognize us please
lint.isort.known-first-party = [ "tika_client" ]

[tool.pyproject-fmt]
max_supported_python = "3.14"

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = [ "tests" ]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"

[tool.coverage.run]
source_pkgs = [ "tika_client", "tests" ]
branch = true
parallel = true
omit = [ "src/tika_client/__about__.py" ]

[tool.coverage.paths]
tika_client = [ "src/tika_client", "*/tika-client/src/tika_client" ]
tests = [ "tests", "*/tika-client/tests" ]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == '__main__':",
  "if TYPE_CHECKING:",
]
fail_under = 95

[tool.mypy]
packages = [ "tika_client", "tests" ]
python_version = "3.9"
disable_error_code = 'import-untyped'
disallow_untyped_defs = true
disallow_incomplete_defs = true
implicit_reexport = false
show_error_codes = true
check_untyped_defs = true
strict = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_unreachable = true
warn_unused_configs = true
