#
# Project Configuration
#
[build-system]
build-backend = "hatchling.build"
requires = [ "hatchling" ]

[project]
name = "tika-client"
description = "A modern REST client for Apache Tika server"
readme = "README.md"
keywords = [ "api", "client", "html", "office", "pdf", "tika" ]
license = "MPL-2.0"
requires-python = ">=3.10"
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Web Environment",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: Mozilla Public License 2.0 (MPL 2.0)",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dynamic = [ "version" ]
#
# Dependencies
#
dependencies = [
  "anyio>=4.12,<5",
  "httpx>=0.28,<1",
  "typing-extensions; python_version<'3.11'",
]
[[project.authors]]
name = "Trenton H"
email = "rda0128ou@mozmail.com"
[project.urls]
changelog = "https://github.com/stumpylog/tika-rest-client/blob/main/CHANGELOG.md"
documentation = "https://github.com/stumpylog/tika-rest-client#readme"
issues = "https://github.com/stumpylog/tika-rest-client/issues"
source = "https://github.com/stumpylog/tika-client"

[tool.hatch.build.targets.sdist]
exclude = [
  ".github",
  ".docker",
]
[tool.hatch.envs.default]
installer = "uv"
[tool.hatch.envs.hatch-static-analysis]
# https://hatch.pypa.io/latest/config/internal/static-analysis/
dependencies = [ "ruff ~= 0.15" ]
config-path = "none"
[tool.hatch.envs.hatch-test]
# https://hatch.pypa.io/latest/config/internal/testing/
parallel = true
randomize = true
dependencies = [
  "coverage-enable-subprocess == 1.0",
  "coverage[toml] ~= 7.13",
  "pytest ~= 9.0",
  "pytest-mock ~= 3.15",
  "pytest-randomly ~= 4.0.1",
  "pytest-rerunfailures ~= 16.1",
  "pytest-xdist[psutil] ~= 3.8",
]
extra-dependencies = [
  "pytest-sugar",
  "pytest-httpx ~= 0.36",
  "pikepdf",
  "python-magic",
  "pytest-docker ~= 3.2",
  "pytest-asyncio",
  "pypdf",
]
extra-args = [ "--maxprocesses=8", "--pythonwarnings=all" ]
[[tool.hatch.envs.hatch-test.matrix]]
python = [ "3.10", "3.11", "3.12", "3.13", "3.14", "pypy3.8", "pypy3.10", "pypy3.11" ]
[tool.hatch.envs.hatch-test.scripts]
run = [
  "python3 --version",
  "pytest{env:HATCH_TEST_ARGS:} {args}",
]
run-cov = [
  "python3 --version",
  "coverage erase",
  "coverage run -m pytest{env:HATCH_TEST_ARGS:} {args}",
]
cov-combine = [ "coverage combine" ]
cov-report = [
  "coverage report",
  "coverage json",
  "coverage html",
]
[tool.hatch.envs.prek]
template = "prek"
detached = true
dependencies = [
  "pre-commit ~= 4.5",
  "prek ~= 0.3.5",
]
[tool.hatch.envs.prek.scripts]
check = [ "prek run --all-files" ]
update = [ "pre-commit autoupdate" ]

#
# Custom Environments
#
[tool.hatch.envs.typing]
detached = true
dependencies = [
  "mypy ~= 1.19",
  "httpx",
]
[tool.hatch.envs.typing.scripts]
run = [
  "mypy --version",
  "mypy --install-types --non-interactive {args:src/tika_client}",
]
[tool.hatch.version]
path = "src/tika_client/__about__.py"

#
# Tool Configuration
#
[tool.ruff]
target-version = "py310"
line-length = 120
# https://docs.astral.sh/ruff/settings/
fix = true
output-format = "grouped"
[tool.ruff.lint]
extend-select = [
  "A",     # https://docs.astral.sh/ruff/rules/#flake8-builtins-a
  "ANN",   # https://docs.astral.sh/ruff/rules/#flake8-annotations-ann
  "ARG",
  "ASYNC", # https://docs.astral.sh/ruff/rules/#flake8-async-async
  "B",     # https://docs.astral.sh/ruff/rules/#flake8-bugbear-b
  "C",
  "C4",
  "COM",
  "D",     # https://docs.astral.sh/ruff/rules/#pydocstyle-d
  "DTZ",
  "E",
  "EM",
  "ERA",
  "EXE",
  "F",
  "FA",
  "FBT",   # https://docs.astral.sh/ruff/rules/#flake8-boolean-trap-fbt
  "FLY",
  "FURB",  # https://docs.astral.sh/ruff/rules/#refurb-furb
  "G",     # https://docs.astral.sh/ruff/rules/#flake8-logging-format-g
  "I",
  "ICN",
  "INP",   # https://docs.astral.sh/ruff/rules/#flake8-no-pep420-inp
  "INT",
  "ISC",
  "LOG",   # https://docs.astral.sh/ruff/rules/#flake8-logging-log
  "N",
  "PERF",
  "PGH",
  "PIE",
  "PL",
  "PLC",
  "PLE",
  "PLR",
  "PLW",
  "PT",
  "PTH",
  "Q",
  "RSE",
  "RUF",   # https://docs.astral.sh/ruff/rules/#ruff-specific-rules-ruf
  "S",
  "SIM",
  "SLF",
  "T",
  "T10",
  "T20",
  "TCH",
  "TD",
  "TID",
  "TRY",
  "UP",
  "W",
  "YTT",   # https://docs.astral.sh/ruff/rules/#flake8-2020-ytt
]
ignore = [
  # Don't require a public docstring for everything
  "D100",
  # I prefer no blank line before a class docstring
  "D203",
  # I prefer a different style
  "D212",
]
per-file-ignores."tests/**/*" = [
  # Tests do not need docstrings
  "D",
  # Tests can use magic numbers
  "PLR2004",
  # Test can (and must) use assert
  "S101",
]
flake8-tidy-imports.ban-relative-imports = "all"
isort.force-single-line = true
isort.known-first-party = [ "tika_client" ]

[tool.pyproject-fmt]
table_format = "long"

[tool.pytest]
minversion = "9.0"
testpaths = [ "tests" ]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"

[tool.coverage]
[tool.coverage.paths]
tests = [ "tests", "*/tika-client/tests" ]
tika_client = [ "src/tika_client", "*/tika-client/src/tika_client" ]
[tool.coverage.report]
exclude_lines = [
  "if __name__ == '__main__':",
  "if TYPE_CHECKING:",
  "no cov",
]
fail_under = 95
[tool.coverage.run]
branch = true
omit = [ "src/tika_client/__about__.py" ]
parallel = true
source_pkgs = [ "tests", "tika_client" ]

[tool.mypy]
packages = [ "tika_client", "tests" ]
python_version = "3.10"
disable_error_code = "import-untyped"
disallow_untyped_defs = true
disallow_incomplete_defs = true
implicit_reexport = false
show_error_codes = true
check_untyped_defs = true
strict = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_unreachable = true
warn_unused_configs = true
